# cpp_study

./: README.md
Robo/: CMakeLists.txt
Robo/src/: ball.cpp  ball.h  object.cpp  object.h  opponent.cpp  opponent.h  parse.cpp  parse.h  player.cpp  player.h  point.h  roboClient.cpp  robot.cpp  server.cpp  socket.cpp  vectr.cpp  vectr.h
Robo/temp/: point.h
Robo11/: CMakeLists.txt
Robo11/src/: ball.cpp  ball.h  constants.cpp  constants.h  kalmanFilter.cpp  kalmanFilter.h  network.cpp  network.h  object.cpp  object.h  opponent.cpp  opponent.h  parse.cpp  parse.h  parser.cpp  parser.h  player.cpp  player.h  roboClient.cpp  socket.h  strategy.cpp  strategy.h  vector2.cpp  vector2.h  vectr.cpp  vectr.h
p1/include/: circle.hpp  point.hpp
p1/src/: CMakeLists.txt  circle.cpp  cirle.cpp  main.cpp  point.cpp
p2/src/: main.cpp  point.cpp
p2_circle/: CMakeLists.txt
p2_circle/src/: CMakeLists.txt  main.cpp
p3_car/include/: car.hpp  ferrari.hpp  kia.hpp  point.hpp  tesla.hpp
p3_car/src/: .main.cpp.swp  car.cpp  ferrari.cpp  kia.cpp  main.cpp  point.cpp  tesla.cpp
p4/include/: circle.hpp
p4_ptr_vector/include/: point.hpp
p4_ptr_vector/src/: circle.cpp  main.cpp
p5_map/src/: main  main.cpp
p6_set_map/: main  main.cpp
p7_vehicle/include/: bike.hpp  car.hpp  vehicle.hpp  vehicleTypes.hpp
p7_vehicle/src/: CMakeLists.txt  bike.cpp  car.cpp  main.cpp  vehicle.cpp
socketserver/: CMakeLists.txt
socketserver/src/: client.cpp  server.cpp  socket.cpp  socket.h
src/: test.cpp
test/src/: main.cpp
test_0/: main.cpp
(+58 files in other folders)
